--- a/my-app/src/pages/adminpage/style/adminpageCss.module.css
+++ b/my-app/src/pages/adminpage/style/adminpageCss.module.css
@@ -88,7 +88,7 @@
 
     max-width: 1940px;
     width: 80%;
-    font-family: 'Jua', sans-serif;
+    font-family: 'Jua', sans-serif !important;
 }
 
 .newWebtoon {
